<resources>
    <string name="app_name">JudoCanada</string>
    <string name="lauchscreen">LauchScreen</string>
    <string name="discription">discription</string>
    <string name="string_discription">discription</string>
    <string name="firstname">First Name:</string>
    <string name="lastname">Last Name:</string>
    <string name="sex">Sex:</string>
    <string name="season">Season:</string>
    <string name="date">Date:</string>
    <string name="country">Country</string>
    <string name="dateofbirth">Date of Birth(Select)</string>
    <string name="select">Select</string>
    <string name="man">Male</string>
    <string name="Woman">Female</string>
    <string name="submit">Submit</string>
    <string name="membernum">Membership number</string>
    <string name="check">Check Another?</string>
    <string name="checkresult">What you are checking does not exit</string>


    <string-array name="season">

        <item>Spring</item>
        <item>Summer</item>
        <item>Autumn</item>
        <item>Winter</item>

    </string-array>

    <string-array name="saison">

        <item>Printemp</item>
        <item>Été</item>
        <item>Automne</item>
        <item>Hiver</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tel">Tel: 514-255-JUDO (5836)</string>
    <string name="Fax">Fax:877-893-JUDO (5836)</string>
    <string name="email">Email: admin@judocanada.org</string>
    <string name="address">4141 avenue Pierre-De Coubertin Montréal, QC H1V 3N7</string>
    <string name="message">Message</string>
</resources>